Update index.html metadata

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FOR NATUSSY</title>
+
+    <meta property="og:title" content="WILL JORDAD STREAM?" />
+    <meta property="og:description" content="CLICK TO FIND OUT" />
+    <meta property="og:image" content="image.png" />
+    <meta property="og:type" content="website" />
+    
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="WILL JORDAD STREAM?" />
+    <meta name="twitter:description" content="CLICK TO FIND OUT" />
+    <meta name="twitter:image" content="image.png" />
+    
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/framer-motion/dist/framer-motion.js"></script>
