--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <meta property="og:title" content="WILL JORDAD STREAM?" />
     <meta property="og:description" content="CLICK TO FIND OUT" />
-    <meta property="og:image" content="image.png" />
+    <meta property="og:image" content="https://jor.lol/image.png" />
     <meta property="og:type" content="website" />
     
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="WILL JORDAD STREAM?" />
     <meta name="twitter:description" content="CLICK TO FIND OUT" />
-    <meta name="twitter:image" content="image.png" />
+    <meta name="twitter:image" content="https://jor.lol/image.png" />
     
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
